# tox_ngc_ft1_tool

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cd.yml
src/: CMakeLists.txt  command_line.cpp  command_line.hpp  ft_sha1_info.cpp  ft_sha1_info.hpp  hash_utils.cpp  hash_utils.hpp  main.cpp  state.hpp  tox_callbacks.cpp  tox_callbacks.hpp  tox_client.cpp  tox_client.hpp  tox_utils.cpp  tox_utils.hpp
src/send_states/: sha1_start.cpp  sha1_start.hpp
src/states/: receive_start_sha1.cpp  receive_start_sha1.hpp  send_start_sha1.cpp  send_start_sha1.hpp  sha1.cpp  sha1.hpp  state_send_start_sha1.cpp
